--- a/WorldForgingApi/Scripts/less/style.less
+++ b/WorldForgingApi/Scripts/less/style.less
@@ -1,6 +1,4 @@
-﻿body {
-}
-// Some Variables that will be used below
+﻿// Some Variables that will be used below
 @color-latest: #5a4d74;
 @color-most-viewed: #4d6552;
 @color-random: #703535;
@@ -194,4 +192,18 @@ form.item-detail-edit {
     color: #f04124;
     font-weight: normal;
     font-style: italic;
+}
+
+.login-container {
+    max-width: 330px;
+    padding: 15px;
+    .form-login {
+        margin: 0 0 10px 20px;
+        .checkbox {
+            margin-bottom: 10px;
+        }
+        input {
+            margin-bottom: 10px;
+        }
+    }
 }
