Further changes to convert "items" to "articles"

--- a/WorldForgingApi/Scripts/less/style.less
+++ b/WorldForgingApi/Scripts/less/style.less
@@ -48,8 +48,8 @@ h2 {
     color: #666666;
 }
 
-// item-list component(s) styling
-item-list {
+// article-list component(s) styling
+article-list {
     border: 0;
     margin: 0;
     padding: 0;
@@ -117,7 +117,7 @@ item-list {
 // Item Detail View & Edit components styling
 @color-panel: #f9f9f9;
 
-.item-container {
+.article-container {
     margin: 0 20px;
     .nav.nav-tabs {
         padding-right: 20px;
@@ -132,7 +132,7 @@ item-list {
     .panel.panel-default {
         background-color: @color-panel;
         border-top-width: 0;
-        .item-image-panel {
+        .article-image-panel {
             width: 170px;
             min-height: 170px;
             float: right;
@@ -157,8 +157,8 @@ item-list {
     }
 }
 
-// Form styling for item-detail-edit component
-form.item-detail-edit {
+// Form styling for article-detail-edit component
+form.article-detail-edit {
     .empty-field {
         color: #f04124;
     }
